web-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-server-deployment
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web-server
  template:
    metadata:
      labels:
        app: web-server
    spec:
      containers:
      - name:  web-server
        image: parshantjagwani/pj-portfolio:web-server-image 
        imagePullPolicy: Always
        ports:
        - containerPort: 80
