web-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-server-service
  namespace: default
spec:
  selector:
    app: web-server
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: web-server-nodeport
  namespace: default
spec:
  type: NodePort
  selector:
    app: web-server
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30002  # Choose a suitable nodePort value, typically in the range 30000-32767
---
apiVersion: v1
kind: Service
metadata:
  name: web-server-loadbalancer
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: web-server
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
